# bukzor.color

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  package.json  pyproject.toml
.claude/: README.md  bash.md  development.md  git.md  tool-use.md
.github/workflows/: pre-commit.yml  test.yml
python/: .gitignore  README.md  TODO.md  pyproject.toml
python/bukzor_color/: __init__.py  api.py  cli.py  contrast.py  contrast_test.py  core.py  core_test.py  encodings_test.py  format.py  models.py  parse.py  types.py
python/bukzor_color/encodings/: __init__.py  base.py  encodings.py  hex.py  hsl.py  hsv.py  rgb.py  wcag_hcl.py
rust/: Cargo.toml  README.md
rust/src/: main.rs
tests/: acceptance-test  test_cases.json
