[project]
name = "bukzor-color"
version = "0.1.0"
description = "Color calculations and conversions CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.0.0"]

[project.scripts]
bukzor-color = "bukzor_color.cli:main"

[dependency-groups]
dev = [
  "black>=25.1.0",
  "hypothesis>=6.139.1",
  "isort>=5.13.2",
  "pytest>=8.4.2",
  "pyupgrade>=3.19.0",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.pyright]
typeCheckingMode = "strict"
analyzeUnannotatedFunctions = true
reportIncompatibleMethodOverride = "error"
pythonVersion = "3.13"
enableTypeIgnoreComments = true
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleVariableOverride = "error"
reportMissingImports = "error"
reportMissingTypeStubs = false
exclude = [".venv", "__pycache__", "node_modules", "trash"]
