[project]
name = "bukzor-color"
version = "0.1.0"
description = "Color calculations and conversions CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.0.0"]

[project.scripts]
bukzor-color = "bukzor_color.cli:main"

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "hypothesis>=6.139.1",
  "isort>=5.13.2",
  "pytest>=8.4.2",
  "pyupgrade>=3.19.0",
]

[tool.setuptools.packages.find]
exclude = ["trash*"]

[tool.black]
line-length = 79
target-version = ["py313"]
skip-magic-trailing-comma = true
preview = true
enable-unstable-feature = ["hug_parens_with_braces_and_square_brackets"]

[tool.isort]
line_length = 79
profile = "black"
use_parentheses = true
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_sections = 1

[tool.pytest.ini_options]
addopts = "--doctest-modules"
norecursedirs = ["trash"]

[tool.pyright]
typeCheckingMode = "strict"
analyzeUnannotatedFunctions = true
reportIncompatibleMethodOverride = "error"
pythonVersion = "3.13"
enableTypeIgnoreComments = true
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleVariableOverride = "error"
reportMissingImports = "error"
reportMissingTypeStubs = false
exclude = [".venv", "__pycache__", "node_modules", "trash"]
