[package]
name = "bukzor-color"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Color calculations and conversions CLI"
license = "Apache-2.0"
authors = ["bukzor"]
keywords = ["color", "cli", "conversion"]
repository = "https://github.com/bukzor/bukzor.color"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
